# Invoke-GeminiQuery

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.py  workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bases/gemini_query/cli_app/: __init__.py  core.py
components/gemini_query/browser/: __init__.py  interface.py  service.py  strategies.py
components/gemini_query/config/: __init__.py  application.py  browser.py  factory.py  legacy.py  network.py  unified.py
components/gemini_query/di/: __init__.py  container.py
components/gemini_query/logging/: __init__.py  setup.py
components/gemini_query/query/: __init__.py  async_service.py  input_processor.py  interface.py  service.py  url_generator.py
components/gemini_query/utils/: __init__.py  errors.py  retry.py
configs/: config.sample.json
development/: __init__.py  main.py
docs/: CONTRIBUTING.md  PROJECT_OVERVIEW.md  architecture.md  changelog.rst  conf.py  contributing.rst  development.md  encoding.md  index.rst  installation.md  license.rst  make.bat  testing.md  troubleshooting.md  usage.md
docs/api/: index.rst
scripts/: fix_browser_config.py  gemini-query.bat  test_interactive.bat
scripts/userscripts/: gemini_auto_input.user.js
tests/: __init__.py  test_async_features.py  test_browser.py  test_browser_strategies.py  test_cli_app_di.py  test_config.py  test_config_factory.py  test_debug.py  test_di.py.disabled  test_di_container.py  test_input_processor.py  test_integration.py.disabled  test_url_generation.py  test_url_generator.py  test_url_params.html
