[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "gemini-query"
dynamic = ["version"]
description = "Advanced Command Line Interface for Google Gemini AI with intelligent browser automation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    {name = "Gemini Query Contributors"}
]
keywords = ["ai", "cli", "gemini", "automation", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "watchdog>=6.0.0",
    "structlog>=24.0.0",
    "playwright>=1.49.0",
    "dependency-injector>=4.41.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.5.0",
    "coverage>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/gemini-query/gemini-query"
Repository = "https://github.com/gemini-query/gemini-query"
Documentation = "https://gemini-query.readthedocs.io/"
Changelog = "https://github.com/gemini-query/gemini-query/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/gemini-query/gemini-query/issues"

[project.scripts]
gemini-query = "gemini_query.cli_app.core:app"
gq = "gemini_query.cli_app.core:app"

# Development dependencies managed by optional dependencies

# Hatchling configuration
[tool.hatch.version]
path = "bases/gemini_query/cli_app/__init__.py"
pattern = "__version__ = \"(?P<version>[^\"]+)\""

# Hatchling build configuration with Polylith support
[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.hatch.build.hooks.polylith-bricks]
# Enable Polylith build hook

[tool.polylith.bricks]
"bases/gemini_query/cli_app" = "gemini_query/cli_app"
"components/gemini_query/browser" = "gemini_query/browser"
"components/gemini_query/config" = "gemini_query/config"
"components/gemini_query/di" = "gemini_query/di"
"components/gemini_query/logging" = "gemini_query/logging"
"components/gemini_query/query" = "gemini_query/query"
"components/gemini_query/utils" = "gemini_query/utils"

[tool.hatch.build.targets.sdist]
include = [
    "/components",
    "/bases",
    "/projects",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/workspace.toml"
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["components", "bases", "projects", "development", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "LOG", # flake8-logging
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S101",  # assert used
    "T201",  # print found
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T201"]
"scripts/**/*" = ["T201"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--asyncio-mode=auto",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "async_test: marks tests as async tests",
    "browser: marks tests that require browser automation",
    "network: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["components", "bases", "projects", "development"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
]
